--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import { Button } from "@/components/ui/button";
 import BaseLayout from "@/layouts/BaseLayout.astro";
 ---
 
@@ -7,8 +6,5 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
   title="Astro Shadcn UI Template"
   description="This template helps you build apps with Astro, Tailwind CSS, and Shadcn UI."
 >
-  <h1>
-    Astro
-    <Button>Hey world</Button>
-  </h1>
+  <h1>Astro</h1>
 </BaseLayout>
