feat: theme toggle, nav, docgen

--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -1,5 +1,6 @@
 ---
 import "@/styles/globals.css";
+import { ViewTransitions } from "astro:transitions";
 
 interface Props {
   title?: string | undefined;
@@ -42,3 +43,5 @@ const { title, description, ogImage } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={ogImage} />
+
+<!-- <ViewTransitions /> -->
