--- a/src/layouts/DocLayout.astro
+++ b/src/layouts/DocLayout.astro
@@ -2,7 +2,6 @@
 import HeadSEO from "@/components/HeadSEO.astro";
 import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
-import { LOCALE } from "@/config";
 
 interface Props {
   title?: string | undefined;
@@ -13,15 +12,14 @@ interface Props {
 const { title, description, ogImage } = Astro.props;
 ---
 
-<!doctype html>
-<html lang=`${LOCALE.lang ?? "en"}` class="scroll-smooth">
+<html lang="en">
   <head>
     <HeadSEO title={title} description={description} ogImage={ogImage} />
   </head>
   <body class="min-h-screen bg-background font-sans antialiased">
     <div class="relative flex min-h-screen flex-col">
       <Header />
-      <main class="flex-auto">
+      <main class="flex-auto mx-auto w-full max-w-5xl px-4 pb-4 pt-2">
         <slot />
       </main>
       <Footer />
