fix: view transition with theme toggle

--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -44,4 +44,4 @@ const { title, description, ogImage } = Astro.props;
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={ogImage} />
 
-<!-- <ViewTransitions /> -->
+<ViewTransitions />
