--- a/src/pages/docs/index.astro
+++ b/src/pages/docs/index.astro
@@ -1,7 +1,7 @@
 ---
-import DocLayout from "@/layouts/DocLayout.astro";
+import DocsLayout from "@/layouts/DocsLayout.astro";
 ---
 
-<DocLayout>
+<DocsLayout>
   <p>Hey this is the main doc</p>
-</DocLayout>
+</DocsLayout>
