breadcumbs functionality added

--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -4,6 +4,7 @@ import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
 import { LOCALE } from "@/config";
 import ToC from "@/components/docs/SideNav.astro";
+import Breadcrumbs from "@/components/docs/Breadcrumbs.astro";
 
 interface Props {
   title?: string | undefined;
@@ -24,9 +25,10 @@ const { title, description, ogImage } = Astro.props;
       <Header />
       <main class="flex-auto mx-auto w-full max-w-5xl px-4 pb-4 pt-2">
         <ToC />
+        <Breadcrumbs />
         <slot />
-        <Footer />
       </main>
+      <Footer />
     </div>
   </body>
 </html>
