minor changes to styling

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import { ModeToggle } from "@/components/ModeToggle";
 import { SITE } from "@/config";
 ---
 
-<header class="sticky top-0 z-50 w-full border-b">
+<header class="sticky top-0 z-50 w-full border-b bg-background">
   <div
     class="container flex h-20 space-x-4 justify-between items-center md:justify-center md:items-center md:space-x-0 md:gap-52"
   >
