--- a/src/components/docs/Breadcrumbs.astro
+++ b/src/components/docs/Breadcrumbs.astro
@@ -30,23 +30,27 @@ const buildBreadcrumbs = (slug: string): { title: string; link: string }[] => {
 
 // Build the breadcrumb trail
 const breadcrumbs = buildBreadcrumbs(slug || "");
+
+const { class: className } = Astro.props;
 ---
 
-<Breadcrumb>
-  <BreadcrumbList>
-    {
-      breadcrumbs.map((breadcrumb, index) => (
-        <BreadcrumbItem>
-          {index < breadcrumbs.length - 1 ? (
-            <BreadcrumbLink href={breadcrumb.link}>
-              {breadcrumb.title}
-            </BreadcrumbLink>
-          ) : (
-            <span>{breadcrumb.title}</span>
-          )}
-          {index < breadcrumbs.length - 1 && <span> / </span>}
-        </BreadcrumbItem>
-      ))
-    }
-  </BreadcrumbList>
-</Breadcrumb>
+<div class:list={className}>
+  <Breadcrumb>
+    <BreadcrumbList>
+      {
+        breadcrumbs.map((breadcrumb, index) => (
+          <BreadcrumbItem>
+            {index < breadcrumbs.length - 1 ? (
+              <BreadcrumbLink href={breadcrumb.link}>
+                {breadcrumb.title}
+              </BreadcrumbLink>
+            ) : (
+              <span>{breadcrumb.title}</span>
+            )}
+            {index < breadcrumbs.length - 1 && <span> / </span>}
+          </BreadcrumbItem>
+        ))
+      }
+    </BreadcrumbList>
+  </Breadcrumb>
+</div>
