--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -3,8 +3,9 @@ import HeadSEO from "@/components/HeadSEO.astro";
 import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
 import Breadcrumbs from "@/components/docs/Breadcrumbs.astro";
-import SideNav from "@/components/docs/SideNav.astro";
+import { menu, SideNavMenu } from "@/components/docs/SideNavMenu";
 import { LOCALE } from "@/config";
+import TableOfContents from "@/components/docs/TableofContents.astro";
 
 interface Props {
   title?: string | undefined;
@@ -12,7 +13,7 @@ interface Props {
   ogImage?: URL | undefined;
 }
 
-const { title, description, ogImage } = Astro.props;
+const { title, description, ogImage } = Astro.props as Props;
 ---
 
 <!doctype html>
@@ -20,20 +21,22 @@ const { title, description, ogImage } = Astro.props;
   <head>
     <HeadSEO title={title} description={description} ogImage={ogImage} />
   </head>
-  <body class="min-h-screen bg-background font-sans antialiased">
+  <body
+    class="min-h-screen bg-background font-sans antialiased overflow-x-hidden"
+  >
     <div class="flex flex-col min-h-screen">
-      <Header />
+      <Header class="" />
       <div class="md:flex md:flex-1">
-        <div class="md:w-64 border-r px-6 py-3">
-          <SideNav />
+        <div class="md:w-64 border-r px-6 py-3 hidden md:block">
+          <SideNavMenu items={menu} />
         </div>
-        <main class="flex-1 flex flex-col md:flex-row">
+        <main class="flex-1 flex flex-col-reverse md:flex-row">
           <div class="flex-1 p-6">
-            <Breadcrumbs />
-            <slot />
+            <Breadcrumbs class="" />
+            <slot class="prose" />
           </div>
-          <div class="md:w-64 p-6 border-l border-border">
-            <p>This is a placeholder for ToC</p>
+          <div class="md:w-64 p-6 border-l border-border hidden md:block">
+            <TableOfContents class="flex flex-col md:sticky md:top-28" />
           </div>
         </main>
       </div>
