--- a/src/layouts/DocLayout.astro
+++ b/src/layouts/DocLayout.astro
@@ -18,7 +18,7 @@ const { title, description, ogImage } = Astro.props;
   <head>
     <HeadSEO title={title} description={description} ogImage={ogImage} />
   </head>
-  <body class="min-h-screen bg-background font-sans antialiased">
+  <body class="min-h-screen bg-background font-sans">
     <div class="relative flex min-h-screen flex-col">
       <Header />
       <main class="flex-auto mx-auto w-full max-w-5xl px-4 pb-4 pt-2">
