--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -21,7 +21,7 @@ const { title, description, ogImage } = Astro.props as Props;
   <head>
     <HeadSEO title={title} description={description} ogImage={ogImage} />
   </head>
-  <body class="min-h-screen bg-background font-sans antialiased">
+  <body class="min-h-screen bg-background font-sans">
     <div class="flex flex-col min-h-screen">
       <Header class="" />
       <main class="flex flex-1 flex-col md:flex-row">
