--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,10 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
+import { ScrollArea } from "@/components/ui/scroll-area";
+
+const tags = Array.from({ length: 50 }).map(
+  (_, i, a) => `v1.2.0-beta.${a.length - i}`
+);
 ---
 
 <BaseLayout
@@ -7,4 +12,12 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
   description="This template helps you build apps with Astro, Tailwind CSS, and Shadcn UI."
 >
   <h1>Astro</h1>
+  <ScrollArea className="h-[200px] w-[350px] rounded-md border p-4" client:load>
+    Jokester began sneaking into the castle in the middle of the night and
+    leaving jokes all over the place: under the king's pillow, in his soup, even
+    in the royal toilet. The king was furious, but he couldn't seem to stop
+    Jokester. And then, one day, the people of the kingdom discovered that the
+    jokes left by Jokester were so funny that they couldn't help but laugh. And
+    once they started laughing, they couldn't stop.
+  </ScrollArea>
 </BaseLayout>
