--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,27 +1,36 @@
 ---
-import { NavMenu, SearchBox, HamNavMenu } from "@/components/Navbar";
 import { ModeToggle } from "@/components/ModeToggle";
 import { SITE } from "@/config";
+import { Button } from "@/components/ui/button";
+import NavMenu from "@/components/NavMenu.astro";
+import SearchBox from "@/components/SearchBox.astro";
+import { HamNavMenu } from "@/components/HamNavMenu";
 
 const { class: className } = Astro.props;
 ---
 
 <header
-  class:list={["sticky top-0 z-50 w-full border-b bg-background", className]}
+  class:list={["py-4 px-6  w-full sticky top-0 bg-background", className]}
 >
   <div
-    class="container flex h-20 space-x-4 justify-between items-center md:justify-center md:items-center md:space-x-0 md:gap-52"
+    class="container flex space-x-4 justify-between items-center md:justify-between md:items-center md:space-x-0 md:max-w-8xl"
   >
-    <div class="">
-      <a href={SITE.website}><h3>{SITE.title}</h3></a>
+    <div class="font-bold flex flex-row items-center">
+      <a href={SITE.website} class="px-4">
+        <Button client:load className="">
+          {SITE.title}
+        </Button>
+      </a>
+      <div class="hidden md:block">
+        <NavMenu />
+      </div>
     </div>
-    <div class="hidden md:block">
-      <NavMenu client:only="react" />
-    </div>
+
     <div class="md:hidden flex flex-row-reverse gap-4">
       <HamNavMenu client:only="react" />
       <ModeToggle client:load transition:persist />
     </div>
+
     <div class="flex-row gap-4 justify-end hidden md:flex">
       <!-- <SearchBox client:idle /> -->
       <ModeToggle client:load transition:persist />
