--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,13 +18,15 @@ const { title, description, ogImage } = Astro.props;
   <head>
     <HeadSEO title={title} description={description} ogImage={ogImage} />
   </head>
-  <body class="min-h-screen bg-background font-sans antialiased">
-    <div class="relative flex min-h-screen flex-col">
-      <Header />
-      <main class="flex-auto">
-        <slot />
+  <body class="min-h-screen bg-background text-foreground font-sans">
+    <div class="flex flex-col min-h-screen">
+      <Header class="" />
+      <main class="flex flex-1 flex-col md:flex-row justify-center py-6">
+        <div class="md:w-3/4 md:max-w-8xl">
+          <slot />
+        </div>
       </main>
-      <Footer />
+      <Footer class="border-t border-border" />
     </div>
   </body>
 </html>
