--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -28,7 +28,7 @@ const { title, description, ogImage } = Astro.props as Props;
         <div class="hidden md:block md:p-4 md:w-1/4 border-r">
           <SideNavMenu items={menu} />
         </div>
-        <div class="flex-1 p-4">
+        <div class="flex-1 p-4 md:w-1/2">
           <Breadcrumbs class="" />
           <div class="prose">
             <slot />
