--- a/src/pages/docs/index.astro
+++ b/src/pages/docs/index.astro
@@ -2,6 +2,6 @@
 import DocsLayout from "@/layouts/DocsLayout.astro";
 ---
 
-<DocsLayout>
+<DocsLayout title="Documentation">
   <p>Hey this is the main doc</p>
 </DocsLayout>
