--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -3,7 +3,7 @@ import HeadSEO from "@/components/HeadSEO.astro";
 import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
 import Breadcrumbs from "@/components/docs/Breadcrumbs.astro";
-import { menu } from "@/lib/utils";
+import { menu, capitalizeFirstLetter } from "@/lib/utils";
 import { LOCALE } from "@/config";
 import TableOfContents from "@/components/docs/TableofContents.astro";
 import SideNavMenu from "@/components/docs/SideNavMenu.astro";
@@ -20,7 +20,11 @@ const { title, description, ogImage } = Astro.props as Props;
 <!doctype html>
 <html lang=`${LOCALE.lang ?? "en"}`>
   <head>
-    <HeadSEO title={title} description={description} ogImage={ogImage} />
+    <HeadSEO
+      title=`${title ? capitalizeFirstLetter(title) + " | Docs" : "Docs"}`
+      description={description}
+      ogImage={ogImage}
+    />
   </head>
   <body class="min-h-screen bg-background font-sans">
     <div class="flex flex-col min-h-screen">
