minor layout fixes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ const { class: className } = Astro.props;
 ---
 
 <header
-  class:list={["py-4 px-6  w-full sticky top-0 bg-background", className]}
+  class:list={["py-4 px-6 w-full sticky top-0 bg-background z-50", className]}
 >
   <div
     class="container flex space-x-4 justify-between items-center md:justify-between md:items-center md:space-x-0 md:max-w-8xl"
