--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -7,6 +7,7 @@ import { menu, capitalizeFirstLetter } from "@/lib/utils";
 import { LOCALE } from "@/config";
 import TableOfContents from "@/components/docs/TableofContents.astro";
 import SideNavMenu from "@/components/docs/SideNavMenu.astro";
+import { ScrollArea } from "@/components/ui/scroll-area";
 
 interface Props {
   title?: string | undefined;
@@ -26,26 +27,49 @@ const { title, description, ogImage } = Astro.props as Props;
       ogImage={ogImage}
     />
   </head>
-  <body class="min-h-screen bg-background font-sans">
+  <body class="bg-background text-foreground font-sans">
     <div class="flex flex-col min-h-screen">
-      <Header class="" />
-      <main class="flex flex-1 flex-col md:flex-row">
-        <div class="hidden md:block md:p-4 md:w-1/4 border-r">
-          <SideNavMenu items={menu} level={0} />
+      <Header class="border-b" />
+      <main class="flex flex-1 flex-col md:flex-row container">
+        <div
+          class="p-4 hidden md:flex md:w-1/5 bg-red-100 h-screen-minus-130 sticky top-[69px]"
+        >
+          <ScrollArea className="h-full" client:only="react">
+            <SideNavMenu items={menu} level={0} />
+          </ScrollArea>
         </div>
-        <div class="flex-1 p-4 md:w-1/2">
+        <div class="p-4 w-full md:w-3/5 bg-blue-100">
           <Breadcrumbs class="" />
           <div class="prose">
             <slot />
           </div>
         </div>
-        <div class="p-4 md:w-1/4 border-l">
-          <TableOfContents
-            class="hidden md:flex md:flex-col md:sticky md:top-28"
-          />
-        </div>
+        <div class="p-4 hidden md:flex md:w-1/5 bg-green-100"></div>
       </main>
       <Footer class="border-t border-border" />
     </div>
   </body>
 </html>
+
+<!-- <body class="min-h-screen bg-background font-sans">
+  <div class="flex flex-col min-h-screen">
+    <Header class="" />
+    <main class="flex flex-1 flex-col md:flex-row">
+      <div class="hidden md:flex md:p-4 md:w-1/4 border-r bg-red-100">
+        <ScrollArea className="h-full" client:only="react">
+          <SideNavMenu items={menu} level={0} />
+        </ScrollArea>
+      </div>
+      <div class="flex-1 p-4 md:w-1/2">
+        <Breadcrumbs class="" />
+        <div class="prose">
+          <slot />
+        </div>
+      </div>
+      <div class="p-4 md:w-1/4 bg-red-100">
+        <TableOfContents class="hidden md:flex md:flex-col md:sticky" />
+      </div>
+    </main>
+    <Footer class="border-t border-border" />
+  </div>
+</body> -->
