--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import { ScrollArea } from "@/components/ui/scroll-area";
+import Sample from "@/components/Sample.astro";
 ---
 
 <BaseLayout
@@ -16,4 +17,6 @@ import { ScrollArea } from "@/components/ui/scroll-area";
     jokes left by Jokester were so funny that they couldn't help but laugh. And
     once they started laughing, they couldn't stop.
   </ScrollArea>
+
+  <Sample />
 </BaseLayout>
