--- a/src/components/core/Header.astro
+++ b/src/components/core/Header.astro
@@ -1,9 +1,9 @@
 ---
-import { ModeToggle } from "@/components/ModeToggle";
+import { ModeToggle } from "@/components/core/ModeToggle";
 import { SITE } from "@/config";
 import { Button } from "@/components/ui/button";
-import NavMenu from "@/components/NavMenu.astro";
-import { HamNavMenu } from "@/components/HamNavMenu";
+import NavMenu from "@/components/core/NavMenu.astro";
+import { HamNavMenu } from "@/components/core/HamNavMenu";
 
 // To pass the tailwindcss classes to the astro component
 const { class: className } = Astro.props;
