--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
-import HeadSEO from "@/components/HeadSEO.astro";
-import Header from "@/components/Header.astro";
-import Footer from "@/components/Footer.astro";
+import HeadSEO from "@/components/core/HeadSEO.astro";
+import Header from "@/components/core/Header.astro";
+import Footer from "@/components/core/Footer.astro";
 import { LOCALE } from "@/config";
 
 interface Props {
