--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -1,7 +1,7 @@
 ---
-import HeadSEO from "@/components/HeadSEO.astro";
-import Header from "@/components/Header.astro";
-import Footer from "@/components/Footer.astro";
+import HeadSEO from "@/components/core/HeadSEO.astro";
+import Header from "@/components/core/Header.astro";
+import Footer from "@/components/core/Footer.astro";
 import Breadcrumbs from "@/components/docs/Breadcrumbs.astro";
 import { menu, capitalizeFirstLetter } from "@/lib/utils";
 import { LOCALE } from "@/config";
