--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -45,7 +45,7 @@ const { title, description, ogImage } = Astro.props as Props;
           </div>
         </div>
         <div
-          class="px-6 py-4 hidden md:flex md:w-1/5 h-static_sidemenu bg-green-100 sticky top-[69px]"
+          class="px-6 py-4 hidden lg:flex md:w-1/5 h-static_sidemenu bg-green-100 sticky top-[69px]"
         >
         </div>
       </main>
